--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -5,4 +5,5 @@
   <string id="30101">Rdio API Secret</string>
   <string id="30102">Rdio Username</string>
   <string id="30103">Rdio Password</string>
+  <string id="30200">Playlists</string>
 </strings>
