List and play tracks from artists within user's collection

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -6,4 +6,7 @@
   <string id="30102">Rdio Username</string>
   <string id="30103">Rdio Password</string>
   <string id="30200">Playlists</string>
+  <string id="30201">Collaborative</string>
+  <string id="30202">Subscribed</string>
+  <string id="30203">Artists</string>
 </strings>
