--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
   <string id="30000">Rdio</string>
-  <string id="30100">Rdio API Key</string>
-  <string id="30101">Rdio API Secret</string>
-  <string id="30102">Rdio Username</string>
-  <string id="30103">Rdio Password</string>
+  <string id="30100">Rdio Username</string>
+  <string id="30101">Rdio Password</string>
+  <string id="30102">Rdio API Key</string>
+  <string id="30103">Rdio API Secret</string>
   <string id="30200">Playlists</string>
   <string id="30201">Collaborative</string>
   <string id="30202">Subscribed</string>
   <string id="30203">Artists</string>
+  <string id="30204">Albums</string>
+  <string id="30205">Settings</string>
 </strings>
