Updated version and changelog for release 1.0

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,1 +1,5 @@
-This plugin is pre-release. It is not yet ready for general use.
+[B]Version 1.0.0[/B]
+- Basic authentication and playback
+- List and play your own collection by artist
+- List and play your own collection by album
+- List and play your playlists (including collaborative and subscribed playlists)
