View people you follow and the albums in their collection

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -12,9 +12,10 @@
   <string id="30202">Subscribed</string>
   <string id="30203">Artists</string>
   <string id="30204">Albums</string>
-  <string id="30205">Settings</string>
+  <string id="30205">Settings...</string>
   <string id="30206">Login</string>
   <string id="30207">Reauthenticate</string>
+  <string id="30208">Your Network</string>
 
   <string id="30900">You must supply your Rdio username/password</string>
   <string id="30901">and Rdio API credentials in plugin settings.</string>
