--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,9 @@
+[B]Version 1.1.0[/B]
+- View people in your network and play their albums, artists and playlists
+- Search for album/artist
+- Browse artist: top albums, top tracks, similar artists
+- Increase timeout for Rdio API calls (decreases probability of failure when retrieving large collections)
+
 [B]Version 1.0.0[/B]
 - Basic authentication and playback
 - List and play your own collection by artist
