--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]Version 1.1.1[/B]
+- Bug authenticating after 1.1.0 upgrade
+
 [B]Version 1.1.0[/B]
 - View people in your network and play their albums, artists and playlists
 - Search for album/artist
