Skip to tracks list if only one album by an artist in collection

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]Version 1.2.0[/B]
+- When selecting artist in your collection, show albums from that artist in your collection rather than tracks (only if there is more than one album)
+
 [B]Version 1.1.1[/B]
 - Bug authenticating after 1.1.0 upgrade
 
