--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -25,6 +25,7 @@
   <string id="30215">New Releases</string>
   <string id="30216">Heavy Rotation</string>
   <string id="30217">More from this artist...</string>
+  <string id="30218">Search Playlists...</string>
 
   <string id="30900">You must supply your Rdio username/password</string>
   <string id="30901">and Rdio API credentials in plugin settings.</string>
