--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -28,6 +28,8 @@
   <string id="30218">Search Playlists...</string>
   <string id="30219">Add to Rdio Collection</string>
   <string id="30220">Remove from Rdio Collection</string>
+  <string id="30221">All Albums</string>
+  <string id="30222">All albums from this artist...</string>
 
   <string id="30900">You must supply your Rdio username/password</string>
   <string id="30901">and Rdio API credentials in plugin settings.</string>
