--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -26,8 +26,8 @@
   <string id="30216">Heavy Rotation</string>
   <string id="30217">More from this artist...</string>
   <string id="30218">Search Playlists...</string>
-  <string id="30219">Add to Rdio Collection</string>
-  <string id="30220">Remove from Rdio Collection</string>
+  <string id="30219">Add to Rdio collection</string>
+  <string id="30220">Remove from Rdio collection</string>
   <string id="30221">All Albums</string>
   <string id="30222">All albums from this artist...</string>
 
