--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+[B]Version 1.3.0[/B]
+- Link to show all albums for an artist
+- Album lists are sortable by album name, date and artist (when applicable)
+- Add song/album to collection
+- Remove song/album from collection
+- Search for playlist
+
 [B]Version 1.2.0[/B]
 - Browse new release albums
 - Browse heavy rotation albums in your network
