--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -30,6 +30,11 @@
   <string id="30220">Remove from Rdio collection</string>
   <string id="30221">All Albums</string>
   <string id="30222">All albums from this artist...</string>
+  <string id="30223">Top Charts</string>
+  <string id="30224">Top Albums</string>
+  <string id="30225">Top Artists</string>
+  <string id="30226">Top Playlists</string>
+  <string id="30227">Top Songs</string>
 
   <string id="30900">You must supply your Rdio username/password</string>
   <string id="30901">and Rdio API credentials in plugin settings.</string>
