--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -35,6 +35,8 @@
   <string id="30225">Top Artists</string>
   <string id="30226">Top Playlists</string>
   <string id="30227">Top Songs</string>
+  <string id="30228">Subscribe to playlist</string>
+  <string id="30229">Unsubscribe from playlist</string>
 
   <string id="30900">You must supply your Rdio username/password</string>
   <string id="30901">and Rdio API credentials in plugin settings.</string>
