--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,6 @@
 [B]Version 1.5.0[/B]
 - Add any track to an existing playlist
+- Remove track from one of your playlists
 
 [B]Version 1.4.0[/B]
 - Show sad face if track or album is not streamable (ie: due to regional licensing restrictions)
