--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]Version 1.6.0[/B]
+- Play "artist radio station"
+
 [B]Version 1.5.0[/B]
 - Add any track to an existing playlist
 - Remove track from one of your playlists
