Ability to toggle between RTMP and HTTP streaming via settings

--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -6,6 +6,7 @@
   <string id="30101">Rdio Password</string>
   <string id="30102">Rdio API Key</string>
   <string id="30103">Rdio API Secret</string>
+  <string id="30104">Streaming Mode</string>
 
   <string id="30200">Playlists</string>
   <string id="30201">Collaborative</string>
