--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -41,6 +41,7 @@
   <string id="30230">Add to Rdio playlist</string>
   <string id="30231">Remove from Rdio playlist</string>
   <string id="30232">Play radio station for this artist</string>
+  <string id="30233">Play collection radio station for this artist</string>
 
   <string id="30900">You must supply your Rdio username/password</string>
   <string id="30901">and Rdio API credentials in plugin settings.</string>
