Update changelog for 1.9.0

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+[B]Version 1.9.0[/B]
+- Play a radio station of songs in a user's collection based on a seed artist
+- Fix for failed playback if no stream mode is set (thanks)
+
 [B]Version 1.8.1[/B]
 - Encode all menu items as UTF8 (t0mm0 common Addon now requires it)
 - Add ability to change the streaming mode and how playback info is retrieved
