--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -45,6 +45,8 @@
   <string id="30234">New releases this week</string>
   <string id="30235">New releases last week</string>
   <string id="30236">New releases last two weeks</string>
+  <string id="30237">Artist Biography</string>
+  <string id="30238">No biography available</string>
 
 
   <string id="30900">You must supply your Rdio username/password</string>
