--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+[B]Version 1.11.0[/B]
+- Gotham compatibility
+
 [B]Version 1.10.0[/B]
 - Added addon fanart for front page
 - Show new releases from particular time frames
