--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,12 @@
+[B]Version 1.14.0[/B]
+- Moving to the official repo
+
+[B]Version 1.13.0[/B]
+- Unreleased
+
+[B]Version 1.12.0[/B]
+- No changes
+
 [B]Version 1.11.0[/B]
 - Gotham compatibility
 
